--- a/js/todo.html
+++ b/js/todo.html
@@ -2,15 +2,22 @@
 	<section class="todoapp">
 		<header class="header">
 			<h1>todos</h1>
-			<input class="new-todo" placeholder="What needs to be done?" autofocus>
+			<input class="new-todo" placeholder="What needs to be done?" autofocus onkeyup={ addTodo }>
 		</header>
 		<!-- This section should be hidden by default and shown when there are todos -->
-		<section class="main">
-			<input class="toggle-all" type="checkbox">
+		<section class="main" >
+			<input class="toggle-all" type="checkbox" checked={} onclick={}>
 			<label for="toggle-all">Mark all as complete</label>
 			<ul class="todo-list">
 				<!-- These are here just to show the structure of the list items -->
 				<!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
+				<li each={ todos }>
+					<div class="view">
+						<input class="toggle" type="checkbox" checked={ completed }>
+						<label>{ title }</label>
+						<button class="destroy"></button>
+					</div>
+				</li>
 				<li class="completed">
 					<div class="view">
 						<input class="toggle" type="checkbox" checked>
@@ -49,4 +56,23 @@
 			<button class="clear-completed">Clear completed</button>
 		</footer>
 	</section>
+
+	<!-- logic here -->
+	<script>
+		this.todos = [];
+
+		// alias
+		var self = this;
+
+		// New todos are entered in the input at the top of the app. The input element should be focused when the page is loaded preferably using the autofocus input attribute. Pressing Enter creates the todo, appends it to the todo list and clears the input. Make sure to .trim() the input and then check that it's not empty before creating a new todo.
+		addTodo(e) {
+			if (e.which == 13) {
+				var value = e.target.value && e.target.value.trim();
+				if (value) {
+					self.todos.push({ title: value, completed: false });
+					e.target.value = '';
+				}
+			};
+		}
+	</script>
 </my-todo>
