--- a/js/todo.html
+++ b/js/todo.html
@@ -5,61 +5,51 @@
 			<input class="new-todo" placeholder="What needs to be done?" autofocus onkeyup={ addTodo }>
 		</header>
 		<!-- This section should be hidden by default and shown when there are todos -->
-		<section class="main" >
+		<section class="main" show={ todos.length }>
 			<input class="toggle-all" type="checkbox" checked={} onclick={}>
 			<label for="toggle-all">Mark all as complete</label>
 			<ul class="todo-list">
 				<!-- These are here just to show the structure of the list items -->
 				<!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-				<li each={ todos }>
+				<li each={ todos } class={ completed: completed, editing: editing }>
 					<div class="view">
 						<input class="toggle" type="checkbox" checked={ completed }>
 						<label>{ title }</label>
 						<button class="destroy"></button>
 					</div>
-				</li>
-				<li class="completed">
-					<div class="view">
-						<input class="toggle" type="checkbox" checked>
-						<label>Taste JavaScript</label>
-						<button class="destroy"></button>
-					</div>
 					<input class="edit" value="Create a TodoMVC template">
-				</li>
-				<li>
-					<div class="view">
-						<input class="toggle" type="checkbox">
-						<label>Buy a unicorn</label>
-						<button class="destroy"></button>
-					</div>
-					<input class="edit" value="Rule the web">
 				</li>
 			</ul>
 		</section>
 		<!-- This footer should hidden by default and shown when there are todos -->
-		<footer class="footer">
+		<footer class="footer" show={ todos.length }>
 			<!-- This should be `0 items left` by default -->
-			<span class="todo-count"><strong>0</strong> item left</span>
+			<span class="todo-count"><strong>{ todos.length }</strong> item left</span>
 			<!-- Remove this if you don't implement routing -->
 			<ul class="filters">
-				<li>
-					<a class="selected" href="#/">All</a>
+				<li each={ filters }>
+					<a href="#/{state}" class={ selected: state==parent.curFilterState }>{ state }</a>
+				</li>
+				<!-- <li>
+					<a class={ selected: } href="#/">All</a>
 				</li>
 				<li>
 					<a href="#/active">Active</a>
 				</li>
 				<li>
 					<a href="#/completed">Completed</a>
-				</li>
+				</li> -->
 			</ul>
 			<!-- Hidden if no completed items are left ↓ -->
-			<button class="clear-completed">Clear completed</button>
+			<button class="clear-completed" show={ todos.length }>Clear completed</button>
 		</footer>
 	</section>
 
 	<!-- logic here -->
 	<script>
 		this.todos = [];
+		this.filters = [ { state: "all" }, { state: "active" }, { state: "completed"} ];
+		this.curFilterState = "active";
 
 		// alias
 		var self = this;
@@ -69,7 +59,7 @@
 			if (e.which == 13) {
 				var value = e.target.value && e.target.value.trim();
 				if (value) {
-					self.todos.push({ title: value, completed: false });
+					self.todos.push({ title: value, completed: true });
 					e.target.value = '';
 				}
 			};
