--- a/js/todo.html
+++ b/js/todo.html
@@ -9,13 +9,12 @@
 			<input class="toggle-all" type="checkbox" checked={} onclick={}>
 			<label for="toggle-all">Mark all as complete</label>
 			<ul class="todo-list">
-				<!-- These are here just to show the structure of the list items -->
 				<!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-				<li each={ todos } class={ completed: completed, editing: editing }>
+				<li each={ getTodos() } class={ completed: completed, editing: editing }>
 					<div class="view">
 						<input class="toggle" type="checkbox" checked={ completed }>
 						<label>{ title }</label>
-						<button class="destroy"></button>
+						<button class="destroy" onclick={ parent.removeTodo }></button>
 					</div>
 					<input class="edit" value="Create a TodoMVC template">
 				</li>
@@ -28,17 +27,8 @@
 			<!-- Remove this if you don't implement routing -->
 			<ul class="filters">
 				<li each={ filters }>
-					<a href="#/{state}" class={ selected: state==parent.curFilterState }>{ state }</a>
+					<a href={ href } class={ selected: state==parent.curFilterState }>{ state }</a>
 				</li>
-				<!-- <li>
-					<a class={ selected: } href="#/">All</a>
-				</li>
-				<li>
-					<a href="#/active">Active</a>
-				</li>
-				<li>
-					<a href="#/completed">Completed</a>
-				</li> -->
 			</ul>
 			<!-- Hidden if no completed items are left ↓ -->
 			<button class="clear-completed" show={ todos.length }>Clear completed</button>
@@ -48,21 +38,63 @@
 	<!-- logic here -->
 	<script>
 		this.todos = [];
-		this.filters = [ { state: "all" }, { state: "active" }, { state: "completed"} ];
-		this.curFilterState = "active";
+		this.filters = [ { state: "all", href: "#/" },
+			{ state: "active", href: "#/active" },
+			{ state: "completed", href: "#/completed"} ];
+		this.curFilterState = "all";
+		this.flicker = false;	// for test
 
 		// alias
 		var self = this;
+
+		// routing: The following routes should be implemented: #/ (all - default), #/active and #/completed (#!/ is also allowed).
+
+		// Study the current hash “in place” using given callback without waiting for it to change.
+		riot.route.exec(function(dummy, state) {
+			// the arguments are always ["", state]			
+			self.curFilterState = state || "all";
+			self.update();
+		})
+
+		// url changes
+		riot.route(function(dummy, state) {
+			self.curFilterState = state;
+			self.update();	// have to call update manually
+		})
 
 		// New todos are entered in the input at the top of the app. The input element should be focused when the page is loaded preferably using the autofocus input attribute. Pressing Enter creates the todo, appends it to the todo list and clears the input. Make sure to .trim() the input and then check that it's not empty before creating a new todo.
 		addTodo(e) {
 			if (e.which == 13) {
 				var value = e.target.value && e.target.value.trim();
 				if (value) {
-					self.todos.push({ title: value, completed: true });
+					self.todos.push({ title: value, completed: self.flicker });
 					e.target.value = '';
+					self.flicker = !self.flicker;	// for test
 				}
 			};
+		}
+
+		removeTodo(e) {
+			var item = e.item;
+			self.todos = self.todos.filter(function(i) {
+				return i != item;
+			});
+		}
+
+		// the filter
+		getTodos() {
+			switch(self.curFilterState) {
+				case "active":
+					return self.todos.filter(function(i) {
+						return !i.completed;
+					});
+				case "completed":
+					return self.todos.filter(function(i) {
+						return i.completed;
+					});
+				default:
+					return self.todos;
+			}
 		}
 	</script>
 </my-todo>
