--- a/js/todo.html
+++ b/js/todo.html
@@ -6,13 +6,13 @@
 		</header>
 		<!-- This section should be hidden by default and shown when there are todos -->
 		<section class="main" show={ todos.length }>
-			<input class="toggle-all" type="checkbox" checked={} onclick={}>
+			<input class="toggle-all" type="checkbox" checked={ isAllDone() } onclick={ toggleAll }>
 			<label for="toggle-all">Mark all as complete</label>
 			<ul class="todo-list">
 				<!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-				<li each={ getTodos() } class={ completed: completed, editing: editing }>
+				<li each={ getTodos(curFilterState) } class={ completed: completed, editing: editing }>
 					<div class="view">
-						<input class="toggle" type="checkbox" checked={ completed }>
+						<input class="toggle" type="checkbox" checked={ completed } onclick={ parent.toggleTodo }>
 						<label>{ title }</label>
 						<button class="destroy" onclick={ parent.removeTodo }></button>
 					</div>
@@ -31,7 +31,7 @@
 				</li>
 			</ul>
 			<!-- Hidden if no completed items are left ↓ -->
-			<button class="clear-completed" show={ todos.length }>Clear completed</button>
+			<button class="clear-completed" show={ getCompleteds().length } onclick={ clearCompleted }>Clear completed</button>
 		</footer>
 	</section>
 
@@ -42,7 +42,7 @@
 			{ state: "active", href: "#/active" },
 			{ state: "completed", href: "#/completed"} ];
 		this.curFilterState = "all";
-		this.flicker = false;	// for test
+		// this.flicker = false;	// for test
 
 		// alias
 		var self = this;
@@ -67,9 +67,9 @@
 			if (e.which == 13) {
 				var value = e.target.value && e.target.value.trim();
 				if (value) {
-					self.todos.push({ title: value, completed: self.flicker });
+					self.todos.push({ title: value, completed: false });
 					e.target.value = '';
-					self.flicker = !self.flicker;	// for test
+					// self.flicker = !self.flicker;	// for test
 				}
 			};
 		}
@@ -79,6 +79,11 @@
 			self.todos = self.todos.filter(function(i) {
 				return i != item;
 			});
+		}
+
+		toggleTodo(e) {
+			var item = e.item;
+			item.completed = !item.completed;
 		}
 
 		// the filter
@@ -96,5 +101,36 @@
 					return self.todos;
 			}
 		}
+		// special case
+		getCompleteds() {
+			return self.todos.filter(function(i) {
+				return i.completed;
+			});
+		}
+
+		clearCompleted(e) {
+			self.todos = self.todos.filter(function(i) {
+				return !i.completed;
+			});
+		}
+
+		// This checkbox toggles all the todos to the same state as itself. Make sure to clear the checked state after the "Clear completed" button is clicked. The "Mark all as complete" checkbox should also be updated when single todo items are checked/unchecked.
+		isAllDone() {
+			return self.todos.every(function(i) {
+				return i.completed;
+			})
+		}
+
+		toggleAll(e) {
+			var checked = e.target.checked;
+			self.todos.forEach(function(i) {
+				i.completed = checked;
+			})
+		}
+
+		// for debug
+		// this.on("update", function() {
+		// 	console.log("updated event fired");
+		// })
 	</script>
 </my-todo>
