Modularize the flux pattern

--- a/flux.html
+++ b/flux.html
@@ -20,6 +20,7 @@
 		</footer>
 		<!-- custom dependencies and script -->
 		<script src="node_modules/riot/riot+compiler.min.js"></script>
+		<script src="js/RiotFlux.js"></script>
 		<script src="js/todo_flux.html" type="riot/tag"></script>
 		<!-- Scripts here. Don't remove ↓ -->
 		<script src="node_modules/todomvc-common/base.js"></script>
