Add local persistency

--- a/js/todo_flux.html
+++ b/js/todo_flux.html
@@ -150,6 +150,8 @@
 			self.update();
 		});
 
+		Controller.direct("todo_get");
+
 		// for debug
 		// this.on("update", function() {
 		// 	console.log("updated event fired");
